[gd_scene load_steps=22 format=3 uid="uid://bx15fvqd0m5ju"]

[ext_resource type="Script" path="res://main.gd" id="1_6p1ww"]
[ext_resource type="Texture2D" uid="uid://ycocna41mu3e" path="res://assets/tilesets/grass tilemap.png" id="2_3b43k"]
[ext_resource type="PackedScene" uid="uid://deghux3vsmge3" path="res://player/player.tscn" id="3_0oq2p"]
[ext_resource type="Texture2D" uid="uid://ciat32vfeu5ic" path="res://assets/selfmadehouse.png" id="4_6ba6v"]
[ext_resource type="Texture2D" uid="uid://cuqxotly4b0vb" path="res://assets/simpletree.png" id="5_7cgi1"]
[ext_resource type="Texture2D" uid="uid://bqd63ntyrm16k" path="res://assets/coin.png" id="6_jdgaa"]
[ext_resource type="FontFile" uid="uid://dwvnucq3ajek6" path="res://fonts/a.ttf" id="7_46pfm"]
[ext_resource type="Script" path="res://player/coins_label.gd" id="8_fa0i4"]
[ext_resource type="PackedScene" uid="uid://dijpk10vvju1t" path="res://shop_stuff/shop_ui.tscn" id="11_7wbxs"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2f1u5"]
texture = ExtResource("2_3b43k")
0:4/0 = 0
0:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:4/0/physics_layer_0/angular_velocity = 0.0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
5:4/0 = 0
5:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:4/0/physics_layer_0/angular_velocity = 0.0
6:4/0 = 0
6:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:4/0/physics_layer_0/angular_velocity = 0.0
0:5/0 = 0
0:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:5/0/physics_layer_0/angular_velocity = 0.0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0 = 0
1:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_0/angular_velocity = 0.0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:5/0 = 0
2:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:5/0/physics_layer_0/angular_velocity = 0.0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:5/0 = 0
4:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:5/0/physics_layer_0/angular_velocity = 0.0
5:5/0 = 0
5:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:5/0/physics_layer_0/angular_velocity = 0.0
6:5/0 = 0
6:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:5/0/physics_layer_0/angular_velocity = 0.0
0:6/0 = 0
0:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:6/0/physics_layer_0/angular_velocity = 0.0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:6/0 = 0
1:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:6/0/physics_layer_0/angular_velocity = 0.0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:6/0 = 0
2:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:6/0/physics_layer_0/angular_velocity = 0.0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:6/0 = 0
4:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:6/0/physics_layer_0/angular_velocity = 0.0
5:6/0 = 0
5:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:6/0/physics_layer_0/angular_velocity = 0.0
6:6/0 = 0
6:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:6/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_jq47t"]
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 5
sources/2 = SubResource("TileSetAtlasSource_2f1u5")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5rn23"]
size = Vector2(66, 45)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g3ilx"]
size = Vector2(5.5, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l6tum"]
size = Vector2(8, 86)

[sub_resource type="Theme" id="Theme_v0bmd"]
default_font = ExtResource("7_46pfm")
default_font_size = 15

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w4q0p"]
size = Vector2(13.5, 20)

[sub_resource type="Theme" id="Theme_0ued0"]
default_font = ExtResource("7_46pfm")
default_font_size = 5

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_hv52k"]
load_path = "res://.godot/imported/wateranim1-sheet.png-da4d53ab672db6f5e10fb1a1088fc49b.ctex"

[sub_resource type="Animation" id="Animation_2nv7n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Wateranim1-sheet:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Wateranim1-sheet:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Wateranim1-sheet:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("CompressedTexture2D_hv52k")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Wateranim1-sheet:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_1rpog"]
resource_name = "water"
length = 3.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Wateranim1-sheet:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Wateranim1-sheet:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Wateranim1-sheet:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("CompressedTexture2D_hv52k")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Wateranim1-sheet:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.3, 0.5, 0.7, 0.9, 1.1, 1.3, 1.5, 1.7, 1.9, 2.1, 2.3, 2.5, 2.7, 2.9, 3.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bf5io"]
_data = {
"RESET": SubResource("Animation_2nv7n"),
"water": SubResource("Animation_1rpog")
}

[node name="MainScene" type="Node2D"]
script = ExtResource("1_6p1ww")

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
tile_set = SubResource("TileSet_jq47t")
format = 2
layer_0/name = "grass"
layer_0/z_index = 2
layer_0/tile_data = PackedInt32Array(1703973, 131074, 6, 1638437, 131074, 5, 1572901, 131074, 5, 1507365, 131074, 5, 1441829, 131074, 5, 1376293, 131074, 5, 1310757, 131074, 4, 1310752, 65538, 4, 1310753, 65538, 4, 1310754, 65538, 4, 1310755, 65538, 4, 1310756, 65538, 4, 1310751, 65538, 4, 1310750, 65538, 4, 1310749, 65538, 4, 1310748, 65538, 4, 1310747, 65538, 4, 1310746, 65538, 4, 1310745, 65538, 4, 1310744, 65538, 4, 1310743, 65538, 4, 1310742, 65538, 4, 1310741, 65538, 4, 1310740, 65538, 4, 1310739, 65538, 4, 1310738, 65538, 4, 1310737, 65538, 4, 1310736, 65538, 4, 1310735, 65538, 4, 1310734, 65538, 4, 1310733, 65538, 4, 1310732, 65538, 4, 1310731, 65538, 4, 1376247, 2, 4, 1376248, 65538, 4, 1376249, 65538, 4, 1376250, 65538, 4, 1376251, 65538, 4, 1376252, 65538, 4, 1376253, 65538, 4, 1376254, 65538, 4, 1376255, 65538, 4, 1310720, 65538, 4, 1310721, 65538, 4, 1376257, 65538, 5, 1376258, 65538, 5, 1376259, 65538, 5, 1310723, 65538, 4, 1310724, 65538, 4, 1310722, 65538, 4, 1310725, 65538, 4, 1310726, 65538, 4, 1310727, 65538, 4, 1310728, 65538, 4, 1310729, 65538, 4, 1310730, 65538, 4, 1376260, 65538, 5, 1376256, 65538, 5, 1441783, 2, 5, 1507319, 2, 5, 1572855, 2, 5, 1638391, 2, 5, 1703927, 2, 5, 1769464, 65538, 6, 1769465, 65538, 6, 1769466, 65538, 6, 1769467, 65538, 6, 1769468, 65538, 6, 1769469, 65538, 6, 1769470, 65538, 6, 1769471, 65538, 6, 1703936, 65538, 6, 1703937, 65538, 6, 1703938, 65538, 6, 1703939, 65538, 6, 1703940, 65538, 6, 1703941, 65538, 6, 1703942, 65538, 6, 1703943, 65538, 6, 1703944, 65538, 6, 1703945, 65538, 6, 1703946, 65538, 6, 1703947, 65538, 6, 1703948, 65538, 6, 1703952, 65538, 6, 1703953, 65538, 6, 1703954, 65538, 6, 1703955, 65538, 6, 1703956, 65538, 6, 1703957, 65538, 6, 1703958, 65538, 6, 1703959, 65538, 6, 1703960, 65538, 6, 1703961, 65538, 6, 1703962, 65538, 6, 1703963, 65538, 6, 1703964, 65538, 6, 1703965, 65538, 6, 1703966, 65538, 6, 1703967, 65538, 6, 1703968, 65538, 6, 1703969, 65538, 6, 1703970, 65538, 6, 1703971, 65538, 6, 1703972, 65538, 6, 1703951, 65538, 6, 1703950, 65538, 6, 1703949, 65538, 6, 1769463, 2, 6, 1572870, 65538, 5, 1507334, 65538, 5, 1441798, 65538, 5, 1376262, 65538, 5, 1376261, 65538, 5, 1441797, 65538, 5, 1441796, 65538, 5, 1441795, 65538, 5, 1441794, 65538, 5, 1441793, 65538, 5, 1441792, 65538, 5, 1507327, 65538, 5, 1441791, 65538, 5, 1441790, 65538, 5, 1441789, 65538, 5, 1441788, 65538, 5, 1441787, 65538, 5, 1441786, 65538, 5, 1441785, 65538, 5, 1441784, 65538, 5, 1507320, 65538, 5, 1572856, 65538, 5, 1638392, 65538, 5, 1703928, 65538, 5, 1703929, 65538, 5, 1638393, 65538, 5, 1572857, 65538, 5, 1507321, 65538, 5, 1507322, 65538, 5, 1572858, 65538, 5, 1638394, 65538, 5, 1703930, 65538, 5, 1703931, 65538, 5, 1638395, 65538, 5, 1572859, 65538, 5, 1507323, 65538, 5, 1507324, 65538, 5, 1572860, 65538, 5, 1638396, 65538, 5, 1703932, 65538, 5, 1703933, 65538, 5, 1638397, 65538, 5, 1572861, 65538, 5, 1507325, 65538, 5, 1507326, 65538, 5, 1572862, 65538, 5, 1638398, 65538, 5, 1703934, 65538, 5, 1703935, 65538, 5, 1638399, 65538, 5, 1572863, 65538, 5, 1507328, 65538, 5, 1572864, 65538, 5, 1638400, 65538, 5, 1638401, 65538, 5, 1572865, 65538, 5, 1507329, 65538, 5, 1507330, 65538, 5, 1572866, 65538, 5, 1638402, 65538, 5, 1638403, 65538, 5, 1572867, 65538, 5, 1507331, 65538, 5, 1507332, 65538, 5, 1572868, 65538, 5, 1638404, 65538, 5, 1638405, 65538, 5, 1572869, 65538, 5, 1507333, 65538, 5, 1638406, 65538, 5, 1638407, 65538, 5, 1572871, 65538, 5, 1507335, 65538, 5, 1441799, 65538, 5, 1376263, 65538, 5, 1376264, 65538, 5, 1441800, 65538, 5, 1507336, 65538, 5, 1572872, 65538, 5, 1638408, 65538, 5, 1638409, 65538, 5, 1572873, 65538, 5, 1507337, 65538, 5, 1441801, 65538, 5, 1376265, 65538, 5, 1376266, 65538, 5, 1441802, 65538, 5, 1507338, 65538, 5, 1572874, 65538, 5, 1638410, 65538, 5, 1638411, 65538, 5, 1572875, 65538, 5, 1507339, 65538, 5, 1441803, 65538, 5, 1376267, 65538, 5, 1376268, 65538, 5, 1441804, 65538, 5, 1507340, 65538, 5, 1572876, 65538, 5, 1638412, 65538, 5, 1638413, 65538, 5, 1572877, 65538, 5, 1507341, 65538, 5, 1441805, 65538, 5, 1376269, 65538, 5, 1376270, 65538, 5, 1441806, 65538, 5, 1507342, 65538, 5, 1572878, 65538, 5, 1638414, 65538, 5, 1638415, 65538, 5, 1572879, 65538, 5, 1507343, 65538, 5, 1441807, 65538, 5, 1376271, 65538, 5, 1376272, 65538, 5, 1441808, 65538, 5, 1507344, 65538, 5, 1572880, 65538, 5, 1638416, 65538, 5, 1638417, 65538, 5, 1572881, 65538, 5, 1507345, 65538, 5, 1441809, 65538, 5, 1376273, 65538, 5, 1376274, 65538, 5, 1441810, 65538, 5, 1507346, 65538, 5, 1572882, 65538, 5, 1638418, 65538, 5, 1638419, 65538, 5, 1572883, 65538, 5, 1507347, 65538, 5, 1441811, 65538, 5, 1376275, 65538, 5, 1376276, 65538, 5, 1441812, 65538, 5, 1507348, 65538, 5, 1572884, 65538, 5, 1638420, 65538, 5, 1638421, 65538, 5, 1572885, 65538, 5, 1507349, 65538, 5, 1441813, 65538, 5, 1376277, 65538, 5, 1376278, 65538, 5, 1441814, 65538, 5, 1507350, 65538, 5, 1572886, 65538, 5, 1638422, 65538, 5, 1638423, 65538, 5, 1572887, 65538, 5, 1507351, 65538, 5, 1441815, 65538, 5, 1376279, 65538, 5, 1376280, 65538, 5, 1441816, 65538, 5, 1507352, 65538, 5, 1572888, 65538, 5, 1638424, 65538, 5, 1638425, 65538, 5, 1572889, 65538, 5, 1507353, 65538, 5, 1441817, 65538, 5, 1376281, 65538, 5, 1376282, 65538, 5, 1441818, 65538, 5, 1507354, 65538, 5, 1572890, 65538, 5, 1638426, 65538, 5, 1638427, 65538, 5, 1572891, 65538, 5, 1507355, 65538, 5, 1441819, 65538, 5, 1376283, 65538, 5, 1376284, 65538, 5, 1441820, 65538, 5, 1507356, 65538, 5, 1572892, 65538, 5, 1638428, 65538, 5, 1638429, 65538, 5, 1572893, 65538, 5, 1507357, 65538, 5, 1441821, 65538, 5, 1376285, 65538, 5, 1376286, 65538, 5, 1441822, 65538, 5, 1507358, 65538, 5, 1572894, 65538, 5, 1638430, 65538, 5, 1638431, 65538, 5, 1572895, 65538, 5, 1507359, 65538, 5, 1441823, 65538, 5, 1376287, 65538, 5, 1376288, 65538, 5, 1441824, 65538, 5, 1507360, 65538, 5, 1572896, 65538, 5, 1638432, 65538, 5, 1638433, 65538, 5, 1572897, 65538, 5, 1507361, 65538, 5, 1441825, 65538, 5, 1376289, 65538, 5, 1376290, 65538, 5, 1441826, 65538, 5, 1507362, 65538, 5, 1572898, 65538, 5, 1638434, 65538, 5, 1638435, 65538, 5, 1572899, 65538, 5, 1507363, 65538, 5, 1441827, 65538, 5, 1376291, 65538, 5, 1376292, 65538, 5, 1441828, 65538, 5, 1507364, 65538, 5, 1572900, 65538, 5, 1638436, 65538, 5)
layer_1/name = "water"
layer_1/z_index = 2
layer_1/tile_data = PackedInt32Array()

[node name="Player" parent="." instance=ExtResource("3_0oq2p")]
z_index = 1
position = Vector2(601, 307)

[node name="PlayerHouse" type="StaticBody2D" parent="."]
position = Vector2(284, 263)
collision_layer = 4
collision_mask = 2

[node name="Sprite2D" type="Sprite2D" parent="PlayerHouse"]
texture = ExtResource("4_6ba6v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHouse"]
position = Vector2(0, 34.5)
shape = SubResource("RectangleShape2D_5rn23")

[node name="InvisibleWallRight" type="StaticBody2D" parent="."]
position = Vector2(609, 262)
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="InvisibleWallRight"]
position = Vector2(-0.75, 0)
shape = SubResource("RectangleShape2D_g3ilx")

[node name="InvisibleWallLeft" type="StaticBody2D" parent="."]
position = Vector2(-144, 263)
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="InvisibleWallLeft"]
shape = SubResource("RectangleShape2D_g3ilx")

[node name="ActualSpot" type="Area2D" parent="."]
position = Vector2(606, 282)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActualSpot"]
shape = SubResource("RectangleShape2D_l6tum")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="CoinsPanel" type="Panel" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.016
anchor_top = 0.889
anchor_right = 0.133
anchor_bottom = 0.972
offset_left = -0.240001
offset_top = -0.0400085
offset_right = -0.120003
offset_bottom = 0.0799866
grow_vertical = 0
pivot_offset = Vector2(30, 15)

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/CoinsPanel"]
texture_filter = 1
layout_mode = 2
anchor_left = 0.067
anchor_top = 0.1
anchor_right = 0.373
anchor_bottom = 0.9
offset_left = -1.025
offset_right = 0.0249977
texture = ExtResource("6_jdgaa")
expand_mode = 4

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/CoinsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.413
anchor_top = 0.133
anchor_right = 0.983
anchor_bottom = 0.867
offset_left = 0.0249996
offset_top = 0.00999999
offset_right = 0.274994
offset_bottom = -0.0100021
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/CoinsPanel/CenterContainer" groups=["Coins", "ThingsToSave"]]
layout_mode = 2
theme = SubResource("Theme_v0bmd")
script = ExtResource("8_fa0i4")

[node name="CloseGamePanel" type="Panel" parent="CanvasLayer"]
process_mode = 3
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(320, 180)

[node name="SaveAndQuitButton" type="Button" parent="CanvasLayer/CloseGamePanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.539
anchor_right = 0.6
anchor_bottom = 0.625
offset_top = -0.0400085
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
text = "SAVE AND QUIT"

[node name="ResumeButton" type="Button" parent="CanvasLayer/CloseGamePanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.444
anchor_top = 0.428
anchor_right = 0.556
anchor_bottom = 0.514
offset_left = -0.160034
offset_top = -0.0800171
offset_right = 0.159973
offset_bottom = -0.0399628
mouse_default_cursor_shape = 2
text = "RESUME"

[node name="Shop" type="Node2D" parent="."]
position = Vector2(521, 308)

[node name="ShopConceptArea" type="Area2D" parent="Shop"]

[node name="Simpletree" type="Sprite2D" parent="Shop/ShopConceptArea"]
position = Vector2(1, 4)
texture = ExtResource("5_7cgi1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shop/ShopConceptArea"]
position = Vector2(1, 2)
shape = SubResource("RectangleShape2D_w4q0p")

[node name="OpenShopButton" type="Button" parent="Shop/ShopConceptArea"]
visible = false
anchors_preset = -1
anchor_left = 0.027
anchor_right = 0.971
anchor_bottom = 1.0
offset_left = -17.0
offset_top = -29.0
offset_right = 17.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme = SubResource("Theme_0ued0")
text = "Open shop"

[node name="ShopUI" parent="Shop" instance=ExtResource("11_7wbxs")]
visible = false
z_index = 1
offset_left = -104.0
offset_top = -118.0
offset_right = 96.0
offset_bottom = 12.0

[node name="Wateranim1-sheet" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(765, 382)
scale = Vector2(2.85568, 1)
texture = SubResource("CompressedTexture2D_hv52k")
hframes = 17

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bf5io")
}

[connection signal="body_entered" from="ActualSpot" to="Player" method="_on_actual_spot_body_entered"]
[connection signal="body_exited" from="ActualSpot" to="Player" method="_on_actual_spot_body_exited"]
[connection signal="pressed" from="CanvasLayer/CloseGamePanel/SaveAndQuitButton" to="." method="_on_save_and_quit_button_pressed"]
[connection signal="pressed" from="CanvasLayer/CloseGamePanel/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="body_entered" from="Shop/ShopConceptArea" to="." method="_on_shop_concept_area_body_entered"]
[connection signal="body_exited" from="Shop/ShopConceptArea" to="." method="_on_shop_concept_area_body_exited"]
[connection signal="pressed" from="Shop/ShopConceptArea/OpenShopButton" to="." method="_on_open_shop_button_pressed"]
